tests/grammar/snapshots/r#mod__grammar__alpha034__comment-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"\n        main {\n            // abc\n        }\n        \"))"
---
[
    (
        Main(
            (
                "main",
                9..13,
            ),
            None,
            [
                (
                    Comment(
                        "abc",
                    ),
                    28..35,
                ),
            ],
        ),
        9..44,
    ),
]
