tests/grammar/snapshots/r#mod__grammar__alpha034__import-10.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"import { var1\"))"
---
(
    Some(
        [
            (
                Import(
                    (
                        false,
                        0..6,
                    ),
                    (
                        "import",
                        0..6,
                    ),
                    (
                        ImportSpecific(
                            [
                                (
                                    "var1",
                                    9..13,
                                ),
                            ],
                        ),
                        7..13,
                    ),
                    (
                        "from",
                        13..13,
                    ),
                    (
                        "",
                        13..13,
                    ),
                ),
                0..13,
            ),
        ],
    ),
    [
        found end of input at 13..13 expected '","', or '"}"',
        found end of input at 13..13 expected something else, or '"from"',
        found end of input at 13..13 expected something else, or '"\""',
    ],
)
